--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Create .nojekyll file
+        run: touch dist/public/.nojekyll
+
       - name: Copy index.html to 404.html for SPA routing
         run: cp dist/public/index.html dist/public/404.html
 
